updating google.html

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -132,7 +132,7 @@
                                     ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
                                     in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
                             </a>
-                            <div class="small-text no-blur">Pamela's Diner Redesigned Website</div>
+                            <div class="small-text no-blur">CMU IS: Graphic Design</div>
                         </div>
                         <div class="proj" id = "proj6" >
                             <a href="projects/gaugeme.html">
