--- a/portfolio/projects/google.html
+++ b/portfolio/projects/google.html
@@ -43,11 +43,11 @@
                 <div class="desc-parent">
                     <div class="desc">
                         <img class="icon" alt="github-icon" src="../assets/calendar.png" />
-                        <div class="description">May - Aug 2022</div>
+                        <div class="date">May - Aug 2022</div>
                     </div>
                     <div class="desc">
                         <img class="icon" alt="github-icon" src="../assets/group.png" />
-                        <div class="description">Front-end developer</div>
+                        <div class="date">Front-end developer</div>
                     </div>
                 </div>
            </div>
@@ -58,15 +58,47 @@
                     <div class="subheading">Project Overview</div>
             </div>
             <div class="description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
-                                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-                                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-                                    in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                This past summer I worked as a STEP intern on Google’s Mountain View campus. Over the course of 12 weeks, I worked on a team within Google Ads to improve the user interface and experience of an internal tool, and to increase the functionalities of that tool. Over the course of 10 weeks of the code-intensive part of the project, I wrote and modified over 1500 lines of code in Java, Javascript, HTML, and CSS, and utilized various data structures and Protocol Buffers. In the final two weeks, I refined my project overview paper, to be submitted to my host and co-host for review at the end of my internship, and also presented my achievements, learnings, and opportunities for future expansion in a slide deck to my team of over 13 engineers, project managers, designers, and interns.
+            </div>
+            <div class="description">
+                Now, enough about all the technical jargon and intricacies. Since this was my first internship in the tech industry, I of course had to explore what Google had to offer. Outside of work, I spent time with my four other roommates (who were also Google interns) exploring campuses, meeting other interns who were studying across the country, and making memories for a lifetime. As an overview, in those 12 weeks, I visited 6 Google campuses, rode in a Waymo automated car in the streets of San Francisco, painted abstract art with the manager of my team, played beach volleyball more times than I can count on two hands, watched Halsey, The Chainsmokers, Charlie Puth, 5 Seconds of Summer, Tate McRae, and more artists perform in the Google Amphitheatre, hiked around Lake Tahoe, camped in Yosemite, explored the Youtube Headquarters, and did more than I could’ve ever imagined. From scooter rides in the morning to bike rides around campus, to G buses back home, to Ubers around town, we explored as much as we could of the ins and outs of Silicon Valley.
+            </div>
+
+
+
+            <div class="intros">
+                <div class="subheading">Part 1: Removing outdated, inconsistent information</div>
+            </div>
+            <div class="description">
+                The first part of my project this summer was centered around removing outdated or inconsistent information to users of the internal tool. My task was to hide certain attributes or aspects that created confusion amongst the users. One major challenge I had was first, understanding the existing database. The first couple of weeks involved a lot of conversation between my hosts and me, so I could understand what was going on beyond the surface of my screen–data pipelines, backend servers, retrieving and storing data from databases. Once I had a clearer understanding of how the code was actually working, I had a much better idea of how I could selectively filter out the information we wanted to display.
+            </div>
+
+            <div class="intros">
+                <div class="subheading">Part 2: Adding more relevant information</div>
+            </div>
+            <div class="description">
+                The second, and largest part of my project was centered around adding more helpful information to users of the tool. I met with my host and cohost to figure out what users wanted, stepping through their requests and needs. Then, I worked on applying my knowledge from the past few weeks in understanding how the existing codebase worked, to add consistent code. The first part of this phase was merely grabbing the right information; the second part involved displaying the information in a visually appealing manner. I talked to the users to clearly understand their needs, discussed with the team’s product manager on how the UI should look (analyzing color, shape, component, and more), conversed with my host and co-host on their requirements and needs, and finally checked in with the team’s manager to ensure the new components I was adding were in line with the existing look and feel of the interface.
             </div>
         </div>
 
-
+        <div class="footer">
+            <div class="container">
+                <div class="contact center">
+                    <a href = "25live.html">
+                        <div class="button left">
+                            <img class="arrow" alt="left-arrow" src="../assets/left.png" />
+                            <div>prev</div>
+                        </div>   
+                    </a>
+                    <a class="small-text" href = "jamjelly.html">   
+                        <div class="button right">
+                            <div>next</div>
+                            <img class="arrow" alt="right-arrow" src="../assets/right.png" />
+                        </div>   
+                    </a>
+                </div>
+            </div>
+        </div>
 
         <div class="footer">
             <div class="container">
