--- a/portfolio/projects/jamjelly.html
+++ b/portfolio/projects/jamjelly.html
@@ -42,16 +42,15 @@
             <div class="container">
                 <div class="contact center">
                     <a href = "gaugeme.html">
-                        
-                        <div class="small-text button">
-                            <img class="left" alt="left-arrow" src="../assets/left.png" />
+                        <div class="button">
+                            <img class="arrow" alt="left-arrow" src="../assets/left.png" />
                             <div>prev</div>
                         </div>   
                     </a>
                     <a class="small-text" href = "pamela.html">   
                         <div class="button">
                             <div>next</div>
-                            <img class="left" alt="right-arrow" src="../assets/right.png" />
+                            <img class="arrow" alt="right-arrow" src="../assets/right.png" />
                         </div>   
                     </a>
                 </div>
