--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -76,34 +76,36 @@
                     <div class="services-list">
                         <div class="proj" id = "proj1"> 
                             <a href="projects/google.html">
-                                <img class="cap" alt="spotify-img" src="assets/google.png" />
-                                <div class = "overlay blur">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
-                                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-                                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-                                    in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
+                                <img class="cap" alt="google-ads" src="assets/google.png" />
+                                <div class = "overlay blur">
+                                    <div class="proj-desc">
+                                    A 12-week exploration as a STEP intern into front-end 
+                                    web development for Google Ads in Mountain View, CA. 
+                                    </div>
+                                </div>
                             </a>
                             <div class="small-text no-blur">Google: STEP Internship</div>
                         </div>
                         <div class="proj" id = "proj2"> 
                             <a href="projects/jamjelly.html">
                                 <img class="cap" alt="spotify-img" src="assets/spotify.png" />
-                                <div class = "overlay blur" id="jamjelly">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
-                                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-                                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-                                    in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
+                                <div class = "overlay blur" id="jamjelly">
+                                    <div class="proj-desc">
+                                    A Spotify playlist generator that creates an editable playlist of varying size for users based on their favorite artist, genre, and current mood.
+                                    </div>
+                                </div>
                             </a>
                             <div class="title-text no-blur">Jam and Jelly Spotify Playlist Maker</div>
                         </div>
                         <div class="proj" id = "proj3" >
                             <a href="projects/pamela.html">
                                 <img class="cap" alt="pamelas-img" src="assets/pamelas.PNG" />
-                                <div class = "overlay blur">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
-                                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-                                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-                                    in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
+                                <div class = "overlay blur">
+                                    <div class="proj-desc">
+                                    A case study done to improve the user interface, accessibility, and look
+                                    of the website for a local restaurant: Pamela's Diner.
+                                    </div>
+                                </div>
                             </a>
                             <div class="title-text no-blur">Pamela's Diner Redesigned Website</div>
                         </div>
@@ -114,23 +116,26 @@
                     <div class="services-list">
                         <div class="proj" id = "proj4" >
                             <a href="projects/gaugeme.html">
-                                <img class="cap" alt="jump" src="assets/gauge.png"  />
-                                <div class = "overlay blur">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
-                                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-                                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-                                    in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
+                                <img class="cap" alt="gauge-me" src="assets/gauge.png"  />
+                                <div class = "overlay blur">
+                                    <div class="proj-desc">
+                                    A project pitch proposing Gauge Me, a Slack add-on that allows employees to fill out
+                                    daily check-in forms, generating comprehensive reports for managers to montior overall
+                                    team well-being, in an effort to improve work-from-home environments.
+                                    </div>
+                                </div>
                             </a>
                             <div class="title-text no-blur">Gauge Me</div>
                         </div>
                         <div class="proj" id = "proj5" >
                             <a href="projects/infosystems.html">
-                                <img class="cap" alt="pamelas-img" src="assets/is.png" />
-                                <div class = "overlay blur">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
-                                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-                                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-                                    in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
+                                <img class="cap" alt="infosystems-img" src="assets/IS.png" />
+                                <div class = "overlay blur">
+                                    <div class="proj-desc">
+                                    Various posters, graphics, and other design mini-projects I've done as an
+                                    office assistant at the Information Systems Office at Carnegie Mellon University.
+                                    </div>
+                                </div>
                             </a>
                             <div class="small-text no-blur">CMU IS: Graphic Design</div>
                         </div>
