--- a/portfolio/projects/google.html
+++ b/portfolio/projects/google.html
@@ -53,6 +53,15 @@
            </div>
         </section>
 
+        <div class="img-section">
+
+                <img class="port" alt="github-icon" src="../assets/japanese-garden.jpg" />
+
+                <img class="port" alt="github-icon" src="../assets/yosemite.jpg" /> 
+
+                <img class="port" alt="github-icon" src="../assets/point-lobo.jpg" /> 
+
+        </div>
         <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">Project Overview</div>
