added content to jam & jelly page

--- a/portfolio/projects/gaugeme.html
+++ b/portfolio/projects/gaugeme.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
     
         <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="projects.css">
         <script defer src="js/app.js"></script>
 
     </head>
@@ -33,6 +34,25 @@
                 </ul>
             </nav>
         </header>
+
+        <section>
+            <div class = "subhead">
+                 <div class = "proj-title">
+                     Gauge Me.
+                 </div>
+                 <div class="desc-parent">
+                     <div class="desc">
+                         <img class="icon" alt="calendar-icon" src="../assets/calendar.png" />
+                         <div class="date">April - May 2022</div>
+                     </div>
+                     <div class="desc">
+                         <img class="icon" alt="group-icon" src="../assets/group.png" />
+                         <div class="date">Product Pitch for 67-250</div>
+                     </div>
+                 </div>
+            </div>
+         </section>
+
 
         <section>
            
