--- a/portfolio/projects/google.html
+++ b/portfolio/projects/google.html
@@ -42,26 +42,25 @@
                 </div>
                 <div class="desc-parent">
                     <div class="desc">
-                        <img class="icon" alt="github-icon" src="../assets/calendar.png" />
+                        <img class="icon" alt="calendar-icon" src="../assets/calendar.png" />
                         <div class="date">May - Aug 2022</div>
                     </div>
                     <div class="desc">
-                        <img class="icon" alt="github-icon" src="../assets/group.png" />
+                        <img class="icon" alt="group-icon" src="../assets/group.png" />
                         <div class="date">Front-end developer</div>
                     </div>
                 </div>
            </div>
         </section>
 
-        <div class="img-section">
-
-                <img class="port" alt="github-icon" src="../assets/japanese-garden.jpg" />
-
-                <img class="port" alt="github-icon" src="../assets/yosemite.jpg" /> 
-
-                <img class="port" alt="github-icon" src="../assets/point-lobo.jpg" /> 
-
+        <div class="body-text"> 
+            <div class="img-sections">
+                <img class="imgs" alt="japanese-garden" src="../assets/japanese-garden.jpg" />
+                <img class="imgs" alt="yosemite" src="../assets/yosemite.jpg" /> 
+                <img class="imgs" alt="point-lobos" src="../assets/point-lobo.jpg" /> 
+            </div>
         </div>
+
         <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">Project Overview</div>
@@ -87,6 +86,32 @@
             </div>
             <div class="description">
                 The second, and largest part of my project was centered around adding more helpful information to users of the tool. I met with my host and cohost to figure out what users wanted, stepping through their requests and needs. Then, I worked on applying my knowledge from the past few weeks in understanding how the existing codebase worked, to add consistent code. The first part of this phase was merely grabbing the right information; the second part involved displaying the information in a visually appealing manner. I talked to the users to clearly understand their needs, discussed with the team’s product manager on how the UI should look (analyzing color, shape, component, and more), conversed with my host and co-host on their requirements and needs, and finally checked in with the team’s manager to ensure the new components I was adding were in line with the existing look and feel of the interface.
+            </div>
+
+            <div class="intros">
+                <div class="subheading">Takeaways</div>
+            </div>
+            <div class="description">
+                <ol>
+                    <li>
+                        <span class="bold">Becoming more confident in my own abilities: </span>I was really able to target my technical, professional, and personal skills throughout the summer, and I became so much better at believing in myself. I’d do some deeper research and debugging on my own before asking for help. I’d go to intern meet and greets to meet new people. I’d reach out to people on my team and UX designers to ask questions.
+                    </li>
+                    <li>
+                        <span class="bold">Communicating my needs:</span> one of the biggest challenges and successes this summer was communicating with my host and co-host on issues I was facing. Often times, there were bugs and issues I was facing that I had no clue how to fix. Part of the solution was debugging and troubleshooting on my own, and part of the solution was asking for help. 
+                    </li>
+                    <li>
+                        <span class="bold">Discovering the industry:</span> beyond just doing my day-to-day work, I sought to understand how the people on my team fit together. It was truly amazing to be working alongside industry professionals who had been working for 15+ years and I learned to branch out and talk to interns from universities around the country, newgrads, engineers on my team, and my host and co-host about their experiences working at Google. Beyond that, I spoke to my mentor who worked at Waymo on everything ranging from imposter syndrome, to exploring different fields, to how to be satisfied in life. I also got the chance to explore UI/UX design by speaking with 3 designers at Google, and am interested in pursuing a career in that industry moving forward.
+                    </li>
+                    <li>
+                        <span class="bold">Exploring Google:</span> a huge part of this summer was having fun and exploring what Google had to offer! From running around 6 campuses to trying diverse cuisines to bowling and rock climbing and playing beach volleyball to searching for big meeting rooms with other interns, I was so lucky to get a glimpse into all the fun and fresh things happening at Google.
+                    </li>
+                </ol>
+            </div>
+            <div class="intros">
+                <div class="subheading">Final Overview</div>
+            </div>
+            <div class="description">
+                My time at Google can be captured as 12 weeks. 57 days. 456 hours. But the mentorship, takeaways, and technical skills I gained from that time will last me so much longer. From the early morning scooter rides to the sunset buses back home to the days of debugging where it seemed like nothing worked, I wouldn’t trade those stressful days for anything. If anything, this summer made me realize my own abilities–and I can’t wait to continue exploring.
             </div>
         </div>
 
