--- a/portfolio/projects/infosystems.html
+++ b/portfolio/projects/infosystems.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
     
         <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="projects.css">
         <script defer src="js/app.js"></script>
 
     </head>
