adding content for gauge me

--- a/portfolio/projects/infosystems.html
+++ b/portfolio/projects/infosystems.html
@@ -36,10 +36,50 @@
         </header>
 
         <section>
-           
-        </section>
+            <div class = "subhead">
+                 <div class = "proj-title">
+                     CMU Information Systems.
+                 </div>
+                 <div class="desc-parent">
+                     <div class="desc">
+                         <img class="icon" alt="calendar-icon" src="../assets/calendar.png" />
+                         <div class="date">Sept 2022 - Present</div>
+                     </div>
+                     <div class="desc">
+                         <img class="icon" alt="group-icon" src="../assets/group.png" />
+                         <div class="date">Graphic Design</div>
+                     </div>
+                 </div>
+            </div>
+         </section>
+
+         <div class="body-text"> 
+            <div class="img-sections">
+                <img class="imgs" alt="japanese-garden" src="../assets/japanese-garden.jpg" />
+                <img class="imgs" alt="yosemite" src="../assets/yosemite.jpg" /> 
+                <img class="imgs" alt="point-lobos" src="../assets/point-lobo.jpg" /> 
+            </div>
+        </div>
 
 
+        <div class="footer">
+            <div class="container">
+                <div class="contact center">
+                    <a href = "gaugeme.html">
+                        <div class="button left">
+                            <img class="arrow" alt="left-arrow" src="../assets/left.png" />
+                            <div>prev</div>
+                        </div>   
+                    </a>
+                    <a class="small-text" href = "25live.html">   
+                        <div class="button right">
+                            <div>next</div>
+                            <img class="arrow" alt="right-arrow" src="../assets/right.png" />
+                        </div>   
+                    </a>
+                </div>
+            </div>
+        </div>
 
         <div class="footer">
             <div class="container">
