--- a/portfolio/projects/pamela.html
+++ b/portfolio/projects/pamela.html
@@ -36,10 +36,45 @@
         </header>
 
         <section>
+            <div class = "subhead">
+                 <div class = "proj-title">
+                     Pamela's Diner.
+                 </div>
+                 <div class="desc-parent">
+                     <div class="desc">
+                         <img class="icon" alt="calendar-icon" src="../assets/calendar.png" />
+                         <div class="date">March - April 2022</div>
+                     </div>
+                     <div class="desc">
+                         <img class="icon" alt="group-icon" src="../assets/group.png" />
+                         <div class="date">Website Redesign for 67-250</div>
+                     </div>
+                 </div>
+            </div>
+         </section>
+
+        <section>
            
         </section>
 
-
+        <div class="footer">
+            <div class="container">
+                <div class="contact center">
+                    <a href = "jamjelly.html">
+                        <div class="button left">
+                            <img class="arrow" alt="left-arrow" src="../assets/left.png" />
+                            <div>prev</div>
+                        </div>   
+                    </a>
+                    <a class="small-text" href = "gaugeme.html">   
+                        <div class="button right">
+                            <div>next</div>
+                            <img class="arrow" alt="right-arrow" src="../assets/right.png" />
+                        </div>   
+                    </a>
+                </div>
+            </div>
+        </div>
 
         <div class="footer">
             <div class="container">
